implementado endpoint POST /installations
